Bug 1549728 - Flush line-breaker whenever the word-break property changes. r=emilio

The patch in bug 1507744 was not sufficient by itself, as the line-breaker could still accumulate a single "current word" across a text-run boundary, and then a single word-break value would be applied to it. We need to flush the line-breaker when word-break changes, so that each part of the word will have break opportunities set according to the appropriate value.

Differential Revision: https://phabricator.services.mozilla.com/D30260